This commit will change top properties from percentage to pixels to ensure the elements are visible on website

--- a/css/main.css
+++ b/css/main.css
@@ -36,21 +36,21 @@ body {
 }
 
 .polaroid:first-child {
-  left: 30%;
-  top: 20%;
+  left: 20%;
+  top: 110px;
   transform: rotate(-10deg);
 }
 
 .polaroid:nth-child(2) {
   z-index: 4;
-  left: 40%;
-  top: 25%;
+  left: 30%;
+  top: 145px;
   transform: rotate(5deg);
 }
 
 .polaroid:last-child {
-  left: 50%;
-  top: 20%;
+  left: 35%;
+  top: 130px;
   transform: rotate(30deg);
 }
 
